--- a/Proyexto X/index.html
+++ b/Proyexto X/index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
 		<link href="canvas.css" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="js/Juguemos.js"></script>
+		<script type="text/javascript" src="js/alpha.js"></script>
 
 
 		<script type="text/javascript">
