agregue al index los robots para probar, Robot V y el Alpha tambien con el fondo e hice algunas correciones al fondo1

--- a/Proyexto X/robotech.html
+++ b/Proyexto X/robotech.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="js/robotV1_v1.js"></script>
     <script type="text/javascript" src="js/viper.js"></script>
+    <script type="text/javascript" src="js/Alpha.js"></script>
 		<script type="text/javascript">
 
 
