--- a/Proyexto X/welcome.html
+++ b/Proyexto X/welcome.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="css/sb-admin.css" media="screen">
 		<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
     	<script type="text/javascript" src="js/welcome.js"></script>
+    	<script type="text/javascript" src="js/texto.js"></script>
 		<script type="text/javascript">
   		$(function() {
 
@@ -18,21 +19,22 @@
             canvas.attr("width", $(window).get(0).innerWidth);
             canvas.attr("height", $(window).get(0).innerHeight);
 
-            var z = 0;
             var x = 400;
-            var y = 250;
+            var x2 = 400;
+            var y = 100;
+            var y2 = 80;
 
 			function animate() { 
    				ctx.clearRect(0, 0, 400, 400); 
 				var hola = new Presentacion(x, y, 400, 400);
 				hola.dibujar(ctx);
-        		setTimeout(animate, 10000); 
+				var palabra = new Texto(x2, y2, 400, 400);
+				palabra.dibujar(ctx);
+        		setTimeout(animate, 1000); 
 			};
+
 			animate();
-
   		});
-
-
   		</script>
 	</head>
   	<body>
