Todos los fondos con sus imagenes Los html y los js :*

--- a/Proyexto X/Fondo2.html
+++ b/Proyexto X/Fondo2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Fondo1</title>
+		<title>Fondo2</title>
 		<meta charset="utf-8">
 		<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
 		<link href="canvas.css" rel="stylesheet" type="text/css">
-		<script type="text/javascript" src="js/Fondo1.js"></script>
+		<script type="text/javascript" src="js/Fondo2.js"></script>
 
 
 
@@ -25,7 +25,7 @@
 				//context = canvas.get(0).getContext("2d");
 	
         
-				fondo1 = new Fondo1();
+				fondo1 = new Fondo2();
 				fondo1.dibujar(context);
 
 				console.log("Juego cargado");
@@ -35,12 +35,12 @@
 		</script>
 	</head>
 <body onload="init()">
-	<canvas width="284px" height="177px" id="mycanvas" style="border: 2px solid black; width:1345px; height:635px"></canvas>
+	<canvas width="700px" height="500px" id="mycanvas" style="border: 2px solid black; width:1345px; height:635px"></canvas>
 	<!-- Insert fallback content here -->
 	</canvas>
 
 <div style="display:none;">
-	<img id="imgFondo1" src="img5.jpg" />
+	<img id="imgFondo2" src="imgCanvas.jpg" />
 </div>
 </body>
 </html>
