reorganizacion de carpetas y actualizacion del juego aun con errores de dibujo

--- a/Proyexto X/index.html
+++ b/Proyexto X/index.html
@@ -4,7 +4,7 @@
         <title>Fuga V1</title>
         <meta charset="utf-8">
         <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
-        <link href="canvas.css" rel="stylesheet" type="text/css">
+        <link href="css/canvas.css" rel="stylesheet" type="text/css">
         <script type="text/javascript" src="js/fondos/Fondo1.js"></script>
         <script type="text/javascript" src="js/fondos/Fondo2.js"></script>
         <script type="text/javascript" src="js/fondos/Fondo3.js"></script>
@@ -129,12 +129,12 @@
             <!-- Insert fallback content here -->
         </canvas>
         <div style="display:none;">
-            <img id="imgFondo1" src="img2.jpg"/>
-            <img id="imgFondo2" src="imgCanvas.jpg"/>
-            <img id="imgFondo3" src="imgCanvas2.jpg"/>
-            <img id="imgFondo4" src="imgCanvas3.jpg"/>
-            <img id="imgFondo5" src="imgCanvas4.jpg"/>
-            <img id="imgFondo6" src="imgCanvas9.jpg"/>
+            <img id="imgFondo1" src="img/img2.jpg"/>
+            <img id="imgFondo2" src="img/imgCanvas.jpg"/>
+            <img id="imgFondo3" src="img/imgCanvas2.jpg"/>
+            <img id="imgFondo4" src="img/imgCanvas3.jpg"/>
+            <img id="imgFondo5" src="img/imgCanvas4.jpg"/>
+            <img id="imgFondo6" src="img/imgCanvas9.jpg"/>
         </div>
     </body>
 </html>
