agregue las armas, posicion, energia y velocidad a los robots aparte de algunas correciones a cada robot con los metods de save() y restore(), el robot principal ya se muevey se dibuja el arma

--- a/Proyexto X/index.html
+++ b/Proyexto X/index.html
@@ -12,7 +12,15 @@
         <script type="text/javascript" src="js/fondos/Fondo5.js"></script>
         <script type="text/javascript" src="js/Juego.js"></script>
         <script type="text/javascript" src="js/robots/RobotXero.js"></script>
+        <script type="text/javascript" src="js/robots/Viper1.js"></script>
+        <script type="text/javascript" src="js/robots/Tiger.js"></script>
+        <script type="text/javascript" src="js/robots/RobotRocket.js"></script>
+        <script type="text/javascript" src="js/robots/Alpha.js"></script>
         <script type="text/javascript" src="js/robots/RobotV1_1.js"></script>
+        <script type="text/javascript" src="js/robots/RobotV1_2.js"></script>
+        <script type="text/javascript" src="js/robots/RobotV1_3.js"></script>
+        <script type="text/javascript" src="js/robots/RobotV1_4.js"></script>
+        <script type="text/javascript" src="js/robots/RobotV1_5.js"></script>
         <script type="text/javascript" src="js/armas/ArmaEstandarEnemigo.js"></script>
         <script type="text/javascript" src="js/armas/ArmaEstandar.js"></script>
         <script type="text/javascript" src="js/municiones/BalaEnergia.js"></script>
@@ -135,7 +143,7 @@
         
         <div style="display:none;">
         
-            <img id="imgFondo1" src="img/img2.jpg"/>
+            <img id="imgFondo1" src="img/img5.jpg"/>
             <img id="imgFondo2" src="img/imgCanvas.jpg"/>
             <img id="imgFondo3" src="img/imgCanvas2.jpg"/>
             <img id="imgFondo4" src="img/imgCanvas3.jpg"/>
