correciones de barra de vida de los robots t la coliciones de las balas ya mueren los robots

--- a/Proyexto X/index.html
+++ b/Proyexto X/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
         <link href="css/canvas.css" rel="stylesheet" type="text/css">
+        <script type="text/javascript" src="js/Nivel.js"></script>
         <script type="text/javascript" src="js/fondos/Fondo1.js"></script>
         <script type="text/javascript" src="js/fondos/Fondo2.js"></script>
         <script type="text/javascript" src="js/fondos/Fondo3.js"></script>
@@ -23,8 +24,12 @@
         <script type="text/javascript" src="js/robots/RobotV1_5.js"></script>
         <script type="text/javascript" src="js/armas/ArmaEstandarEnemigo.js"></script>
         <script type="text/javascript" src="js/armas/ArmaEstandar.js"></script>
+        <script type="text/javascript" src="js/armas/ArmaCohete.js"></script>
+        <script type="text/javascript" src="js/armas/ArmaMetralleta.js"></script>
         <script type="text/javascript" src="js/municiones/BalaEnergia.js"></script>
-        <script type="text/javascript" src="js/Nivel.js"></script>
+        <script type="text/javascript" src="js/municiones/BalaEnergiaEnemigo.js"></script>
+        <script type="text/javascript" src="js/ion.sound.js"></script>
+        <script type="text/javascript" src="js/ion.sound.min.js"></script>
         <script type="text/javascript">
             $(function() {
 
