Sonidos de disparos

--- a/Proyexto X/index.html
+++ b/Proyexto X/index.html
@@ -36,7 +36,7 @@
         <script type="text/javascript" src="js/municiones/BalaMisil.js"></script>
         <script type="text/javascript" src="js/municiones/BalaPlasma.js"></script>
         <script type="text/javascript" src="js/ion.sound.js"></script>
-        <script type="text/javascript" src="js/ion.sound.min.js"></script>
+        <script type="text/javascript" src="js/preloadjs-0.1.0.min.js"></script>
         <script type="text/javascript">
             $(function() {
 
